--- a/pandas_exercises-master/02_Filtering_&_Sorting/Chipotle/Exercises.ipynb
+++ b/pandas_exercises-master/02_Filtering_&_Sorting/Chipotle/Exercises.ipynb
@@ -164,36 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4622 entries, 0 to 4621\n",
-      "Columns: 5 entries, order_id to item_price\n",
-      "dtypes: float64(1), int64(2), object(2)\n",
-      "memory usage: 180.6+ KB\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "order_id                int64\n",
-       "quantity                int64\n",
-       "item_name              object\n",
-       "choice_description     object\n",
-       "item_price            float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chipo.describe(include = 'all')\n",
     "\n",
@@ -208,7 +181,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "order_id                int64\n",
+       "quantity                int64\n",
+       "item_name              object\n",
+       "choice_description     object\n",
+       "item_price            float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Could also do the following\n",
+    "prices = [float(value[1: -1]) for value in chipo.item_price]\n",
+    "\n",
+    "chipo.item_price = prices\n",
+    "\n",
+    "chipo.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chipo[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1130"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price_check = chipo['item_price'] > 10\n",
+    "\n",
+    "chipo_prices = chipo[price_check]\n",
+    "chipo_prices.item_name\n",
+    "\n",
+    "len(chipo_prices.item_name)\n",
+    "\n",
+    "# chipo_prices.groupby(by='item_name')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 5. What is the price of each item? \n",
+    "###### print a data frame with only two columns item_name and item_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -241,159 +288,66 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>606</th>\n",
+       "      <td>250</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Chips and Fresh Tomato Salsa</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.39</td>\n",
+       "      <td>Steak Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Pinto Beans, Cheese, Gua...</td>\n",
+       "      <td>11.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>1229</th>\n",
+       "      <td>501</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Izze</td>\n",
-       "      <td>[Clementine]</td>\n",
-       "      <td>3.39</td>\n",
+       "      <td>Barbacoa Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Rice, Fajita Vegetables,...</td>\n",
+       "      <td>11.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1132</th>\n",
+       "      <td>468</td>\n",
        "      <td>1</td>\n",
+       "      <td>Carnitas Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Rice, Black Beans, Chees...</td>\n",
+       "      <td>11.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>41</td>\n",
        "      <td>1</td>\n",
-       "      <td>Nantucket Nectar</td>\n",
-       "      <td>[Apple]</td>\n",
-       "      <td>3.39</td>\n",
+       "      <td>Carnitas Burrito</td>\n",
+       "      <td>[Roasted Chili Corn Salsa, [Sour Cream, Guacam...</td>\n",
+       "      <td>11.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1008</th>\n",
+       "      <td>413</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Carnitas Crispy Tacos</td>\n",
+       "      <td>[Tomatillo Green Chili Salsa, [Rice, Black Bea...</td>\n",
+       "      <td>11.75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   order_id  quantity                     item_name choice_description  \\\n",
-       "0         1         1  Chips and Fresh Tomato Salsa                NaN   \n",
-       "1         1         1                          Izze       [Clementine]   \n",
-       "2         1         1              Nantucket Nectar            [Apple]   \n",
+       "      order_id  quantity              item_name  \\\n",
+       "606        250         1       Steak Salad Bowl   \n",
+       "1229       501         1    Barbacoa Salad Bowl   \n",
+       "1132       468         1    Carnitas Salad Bowl   \n",
+       "93          41         1       Carnitas Burrito   \n",
+       "1008       413         1  Carnitas Crispy Tacos   \n",
        "\n",
-       "   item_price  \n",
-       "0        2.39  \n",
-       "1        3.39  \n",
-       "2        3.39  "
+       "                                     choice_description  item_price  \n",
+       "606   [Fresh Tomato Salsa, [Pinto Beans, Cheese, Gua...       11.89  \n",
+       "1229  [Fresh Tomato Salsa, [Rice, Fajita Vegetables,...       11.89  \n",
+       "1132  [Fresh Tomato Salsa, [Rice, Black Beans, Chees...       11.89  \n",
+       "93    [Roasted Chili Corn Salsa, [Sour Cream, Guacam...       11.75  \n",
+       "1008  [Tomatillo Green Chili Salsa, [Rice, Black Bea...       11.75  "
       ]
      },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chipo[:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "31"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "price_check = chipo['item_price'] >= 10\n",
-    "\n",
-    "chipo_prices = chipo[price_check]\n",
-    "chipo_prices.item_name.unique()\n",
-    "\n",
-    "len(chipo_prices.item_name.unique())\n",
-    "\n",
-    "# chipo_prices.groupby(by='item_name')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 5. What is the price of each item? \n",
-    "###### print a data frame with only two columns item_name and item_price"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item_name</th>\n",
-       "      <th>item_price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Chips and Fresh Tomato Salsa</td>\n",
-       "      <td>2.39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Izze</td>\n",
-       "      <td>3.39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Nantucket Nectar</td>\n",
-       "      <td>3.39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Chips and Tomatillo-Green Chili Salsa</td>\n",
-       "      <td>2.39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Chicken Bowl</td>\n",
-       "      <td>16.98</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               item_name  item_price\n",
-       "0           Chips and Fresh Tomato Salsa        2.39\n",
-       "1                                   Izze        3.39\n",
-       "2                       Nantucket Nectar        3.39\n",
-       "3  Chips and Tomatillo-Green Chili Salsa        2.39\n",
-       "4                           Chicken Bowl       16.98"
-      ]
-     },
-     "execution_count": 36,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +355,17 @@
    "source": [
     "chipo_items = chipo[['item_name', 'item_price']]\n",
     "\n",
-    "chipo_items.head(5)"
+    "chipo_items.head(5)\n",
+    "\n",
+    "# I did non unique, they wanted to see distinct items, so do something like\n",
+    "\n",
+    "chipo_unique_items = chipo.drop_duplicates(['item_name', 'item_price'])\n",
+    "\n",
+    "chipo_item_prices = chipo_unique_items['quantity'] == 1\n",
+    "\n",
+    "chipo_distinct_prices = chipo_unique_items[chipo_item_prices]\n",
+    "\n",
+    "chipo_distinct_prices.sort_values(by = 'item_price', ascending = False)[:5]"
    ]
   },
   {
@@ -413,80 +377,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item_name</th>\n",
-       "      <th>item_price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3389</th>\n",
-       "      <td>6 Pack Soft Drink</td>\n",
-       "      <td>12.98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>341</th>\n",
-       "      <td>6 Pack Soft Drink</td>\n",
-       "      <td>6.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1849</th>\n",
-       "      <td>6 Pack Soft Drink</td>\n",
-       "      <td>6.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1860</th>\n",
-       "      <td>6 Pack Soft Drink</td>\n",
-       "      <td>6.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2713</th>\n",
-       "      <td>6 Pack Soft Drink</td>\n",
-       "      <td>6.49</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "              item_name  item_price\n",
-       "3389  6 Pack Soft Drink       12.98\n",
-       "341   6 Pack Soft Drink        6.49\n",
-       "1849  6 Pack Soft Drink        6.49\n",
-       "1860  6 Pack Soft Drink        6.49\n",
-       "2713  6 Pack Soft Drink        6.49"
+       "3389    6 Pack Soft Drink\n",
+       "341     6 Pack Soft Drink\n",
+       "1849    6 Pack Soft Drink\n",
+       "1860    6 Pack Soft Drink\n",
+       "2713    6 Pack Soft Drink\n",
+       "Name: item_name, dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chipo_items.sort_values('item_name', ascending=True)[:5]"
+    "chipo_items.sort_values('item_name', ascending=True)[:5]\n",
+    "\n",
+    "# or \n",
+    "\n",
+    "chipo_items.item_name.sort_values()[:5]"
    ]
   },
   {
@@ -498,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +458,7 @@
        "3598        15  Chips and Fresh Tomato Salsa       44.25"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +485,7 @@
        "18"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +499,11 @@
     "\n",
     "chipo[veggie_salad]['quantity'].aggregate(sum)\n",
     "\n",
-    "# Actually meant the count of the quantity. Should redo this."
+    "# So, this was correct. But just a really long way of doing it.\n",
+    "\n",
+    "chipo_salad = chipo[chipo.item_name == 'Veggie Salad Bowl']\n",
+    "\n",
+    "len(chipo_salad)"
    ]
   },
   {
@@ -596,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +532,7 @@
        "(20, 5)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
