--- a/pandas_exercises-master/03_Grouping/Occupation/Exercise.ipynb
+++ b/pandas_exercises-master/03_Grouping/Occupation/Exercise.ipynb
@@ -20,12 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,12 +45,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>zip_code</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>24</td>\n",
+       "      <td>M</td>\n",
+       "      <td>technician</td>\n",
+       "      <td>85711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53</td>\n",
+       "      <td>F</td>\n",
+       "      <td>other</td>\n",
+       "      <td>94043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23</td>\n",
+       "      <td>M</td>\n",
+       "      <td>writer</td>\n",
+       "      <td>32067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>M</td>\n",
+       "      <td>technician</td>\n",
+       "      <td>43537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>33</td>\n",
+       "      <td>F</td>\n",
+       "      <td>other</td>\n",
+       "      <td>15213</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         age gender  occupation zip_code\n",
+       "user_id                                 \n",
+       "1         24      M  technician    85711\n",
+       "2         53      F       other    94043\n",
+       "3         23      M      writer    32067\n",
+       "4         24      M  technician    43537\n",
+       "5         33      F       other    15213"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user'\n",
+    "\n",
+    "users = pd.read_csv(url, delimiter='|', index_col='user_id')\n",
+    "\n",
+    "users[:5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,12 +154,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "occupation\n",
+       "administrator    38.746835\n",
+       "artist           31.392857\n",
+       "doctor           43.571429\n",
+       "educator         42.010526\n",
+       "engineer         36.388060\n",
+       "entertainment    29.222222\n",
+       "executive        38.718750\n",
+       "healthcare       41.562500\n",
+       "homemaker        32.571429\n",
+       "lawyer           36.750000\n",
+       "librarian        40.000000\n",
+       "marketing        37.615385\n",
+       "none             26.555556\n",
+       "other            34.523810\n",
+       "programmer       33.121212\n",
+       "retired          63.071429\n",
+       "salesman         35.666667\n",
+       "scientist        35.548387\n",
+       "student          22.081633\n",
+       "technician       33.148148\n",
+       "writer           36.311111\n",
+       "Name: age, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users.groupby(by='occupation').age.mean()\n",
+    "\n",
+    "# same as\n",
+    "\n",
+    "# users[['occupation', 'age']].groupby('occupation').mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,12 +207,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "users.head()\n",
+    "\n",
+    "gender_occupation = users[['occupation', 'gender']]\n",
+    "\n",
+    "male_workers = gender_occupation['gender'] == 'M'\n",
+    "\n",
+    "female_workers = gender_occupation['gender'] == 'F'\n",
+    "\n",
+    "gender_occupation = gender_occupation.assign(male = male_workers)\n",
+    "\n",
+    "gender_occupation = gender_occupation.assign(female = female_workers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gender_occupation\n",
+    "\n",
+    "for value in gender_occupation['female']:\n",
+    "    if value == True:\n",
+    "        value = 1\n",
+    "    elif value == False:\n",
+    "        value = 0\n",
+    "        \n",
+    "# This is all wrong"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "doctor           100.000000\n",
+       "engineer          97.014925\n",
+       "technician        96.296296\n",
+       "retired           92.857143\n",
+       "programmer        90.909091\n",
+       "executive         90.625000\n",
+       "scientist         90.322581\n",
+       "entertainment     88.888889\n",
+       "lawyer            83.333333\n",
+       "salesman          75.000000\n",
+       "educator          72.631579\n",
+       "student           69.387755\n",
+       "other             65.714286\n",
+       "marketing         61.538462\n",
+       "writer            57.777778\n",
+       "none              55.555556\n",
+       "administrator     54.430380\n",
+       "artist            53.571429\n",
+       "librarian         43.137255\n",
+       "healthcare        31.250000\n",
+       "homemaker         14.285714\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def gender_to_value(x):\n",
+    "    if x == 'M':\n",
+    "        return 1\n",
+    "    if x == 'F':\n",
+    "        return 0\n",
+    "    \n",
+    "gender_occupation = users[['occupation', 'gender']]\n",
+    "\n",
+    "gender_occupation['gender_value'] = gender_occupation['gender'].apply(gender_to_value)\n",
+    "\n",
+    "gender_ratio = gender_occupation.groupby('occupation').gender_value.sum() / gender_occupation.occupation.value_counts() * 100\n",
+    "\n",
+    "gender_ratio.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Above was so wrong. I should re-do that"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,7 +332,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -109,7 +348,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -125,7 +364,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -133,23 +372,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
