--- a/pandas_exercises-master/03_Grouping/Occupation/Exercise.ipynb
+++ b/pandas_exercises-master/03_Grouping/Occupation/Exercise.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "5         33      F       other    15213"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "Name: age, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -330,12 +330,366 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>max age</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>occupation</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>administrator</th>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>artist</th>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>doctor</th>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>educator</th>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>engineer</th>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>entertainment</th>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>executive</th>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>healthcare</th>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>homemaker</th>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lawyer</th>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>librarian</th>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>marketing</th>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>none</th>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>other</th>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>programmer</th>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>retired</th>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>salesman</th>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>scientist</th>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>student</th>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>technician</th>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>writer</th>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               max age\n",
+       "occupation            \n",
+       "administrator       70\n",
+       "artist              48\n",
+       "doctor              64\n",
+       "educator            63\n",
+       "engineer            70\n",
+       "entertainment       50\n",
+       "executive           69\n",
+       "healthcare          62\n",
+       "homemaker           50\n",
+       "lawyer              53\n",
+       "librarian           69\n",
+       "marketing           55\n",
+       "none                55\n",
+       "other               64\n",
+       "programmer          63\n",
+       "retired             73\n",
+       "salesman            66\n",
+       "scientist           55\n",
+       "student             42\n",
+       "technician          55\n",
+       "writer              60"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tech_test = users[users['occupation'] == 'technician'][['age', 'occupation']]\n",
+    "\n",
+    "# tech_test.age.max()\n",
+    "\n",
+    "# occupation_age_range = users.groupby('occupation').age.max()\n",
+    "\n",
+    "# occupation_age_range.to_frame(name='age_range')\n",
+    "\n",
+    "occupation_age_range = pd.DataFrame(data=users.groupby('occupation').age.max())\n",
+    "\n",
+    "occupation_age_range.columns = ['max age']\n",
+    "\n",
+    "occupation_age_range.add(users.groupby('occupation').age.min(), axis='columns')\n",
+    "\n",
+    "occupation_age_range\n",
+    "\n",
+    "# occupation_age_range.append(users.groupby('occupation').age.min())\n",
+    "\n",
+    "# users.groupby('occupation').age.max()\n",
+    "\n",
+    "# occupation_age_range\n",
+    "\n",
+    "# I struggled with the append piece"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>occupation</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>administrator</th>\n",
+       "      <td>21</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>artist</th>\n",
+       "      <td>19</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>doctor</th>\n",
+       "      <td>28</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>educator</th>\n",
+       "      <td>23</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>engineer</th>\n",
+       "      <td>22</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>entertainment</th>\n",
+       "      <td>15</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>executive</th>\n",
+       "      <td>22</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>healthcare</th>\n",
+       "      <td>22</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>homemaker</th>\n",
+       "      <td>20</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lawyer</th>\n",
+       "      <td>21</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>librarian</th>\n",
+       "      <td>23</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>marketing</th>\n",
+       "      <td>24</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>none</th>\n",
+       "      <td>11</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>other</th>\n",
+       "      <td>13</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>programmer</th>\n",
+       "      <td>20</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>retired</th>\n",
+       "      <td>51</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>salesman</th>\n",
+       "      <td>18</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>scientist</th>\n",
+       "      <td>23</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>student</th>\n",
+       "      <td>7</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>technician</th>\n",
+       "      <td>21</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>writer</th>\n",
+       "      <td>18</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               min  max\n",
+       "occupation             \n",
+       "administrator   21   70\n",
+       "artist          19   48\n",
+       "doctor          28   64\n",
+       "educator        23   63\n",
+       "engineer        22   70\n",
+       "entertainment   15   50\n",
+       "executive       22   69\n",
+       "healthcare      22   62\n",
+       "homemaker       20   50\n",
+       "lawyer          21   53\n",
+       "librarian       23   69\n",
+       "marketing       24   55\n",
+       "none            11   55\n",
+       "other           13   64\n",
+       "programmer      20   63\n",
+       "retired         51   73\n",
+       "salesman        18   66\n",
+       "scientist       23   55\n",
+       "student          7   42\n",
+       "technician      21   55\n",
+       "writer          18   60"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Rofl, just use the agg function\n",
+    "\n",
+    "users.age.agg\n",
+    "\n",
+    "users.groupby('occupation').age.agg(['min', 'max'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -346,12 +700,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>occupation</th>\n",
+       "      <th>gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">administrator</th>\n",
+       "      <th>F</th>\n",
+       "      <td>22</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>21</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">artist</th>\n",
+       "      <th>F</th>\n",
+       "      <td>19</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>20</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>doctor</th>\n",
+       "      <th>M</th>\n",
+       "      <td>28</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      min  max\n",
+       "occupation    gender          \n",
+       "administrator F        22   62\n",
+       "              M        21   70\n",
+       "artist        F        19   48\n",
+       "              M        20   45\n",
+       "doctor        M        28   64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users.groupby(['occupation', 'gender']).age.agg(['min', 'max'])[:5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -362,12 +796,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "occupation     gender\n",
+       "administrator  F          45.569620\n",
+       "               M          54.430380\n",
+       "artist         F          46.428571\n",
+       "               M          53.571429\n",
+       "doctor         M         100.000000\n",
+       "educator       F          27.368421\n",
+       "               M          72.631579\n",
+       "engineer       F           2.985075\n",
+       "               M          97.014925\n",
+       "entertainment  F          11.111111\n",
+       "               M          88.888889\n",
+       "executive      F           9.375000\n",
+       "               M          90.625000\n",
+       "healthcare     F          68.750000\n",
+       "               M          31.250000\n",
+       "homemaker      F          85.714286\n",
+       "               M          14.285714\n",
+       "lawyer         F          16.666667\n",
+       "               M          83.333333\n",
+       "librarian      F          56.862745\n",
+       "               M          43.137255\n",
+       "marketing      F          38.461538\n",
+       "               M          61.538462\n",
+       "none           F          44.444444\n",
+       "               M          55.555556\n",
+       "other          F          34.285714\n",
+       "               M          65.714286\n",
+       "programmer     F           9.090909\n",
+       "               M          90.909091\n",
+       "retired        F           7.142857\n",
+       "               M          92.857143\n",
+       "salesman       F          25.000000\n",
+       "               M          75.000000\n",
+       "scientist      F           9.677419\n",
+       "               M          90.322581\n",
+       "student        F          30.612245\n",
+       "               M          69.387755\n",
+       "technician     F           3.703704\n",
+       "               M          96.296296\n",
+       "writer         F          42.222222\n",
+       "               M          57.777778\n",
+       "Name: gender, dtype: float64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "occupation_gender = users.groupby(['occupation', 'gender']).agg({'gender': 'count'})\n",
+    "\n",
+    "occupation_gender\n",
+    "\n",
+    "occu_count = users.groupby(['occupation']).agg('count')\n",
+    "\n",
+    "occu_count\n",
+    "\n",
+    "gender_rate = occupation_gender.div(occu_count, level = 'occupation') * 100\n",
+    "\n",
+    "gender_rate['gender']"
+   ]
   }
  ],
  "metadata": {
