05 Merge Housing 06 Stats Wind

--- a/pandas_exercises-master/05_Merge/Housing Market/Exercises.ipynb
+++ b/pandas_exercises-master/05_Merge/Housing Market/Exercises.ipynb
@@ -21,7 +21,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -40,8 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "s1 = pd.DataFrame(np.random.randint(low=1, high=4, size=100))\n",
@@ -58,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,33 +94,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>26685</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>10114</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>17849</td>\n",
+       "      <td>24331</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>25687</td>\n",
+       "      <td>25948</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16287</td>\n",
+       "      <td>29961</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -124,14 +128,14 @@
       ],
       "text/plain": [
        "   0  0      0\n",
-       "0  3  1  26685\n",
-       "1  2  2  10114\n",
-       "2  2  1  17849\n",
-       "3  2  2  25687\n",
-       "4  2  2  16287"
+       "0  2  2  20278\n",
+       "1  2  1  13093\n",
+       "2  2  1  24331\n",
+       "3  1  2  25948\n",
+       "4  1  2  29961"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,15 +155,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "62.5 µs ± 106 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
-      "280 µs ± 9.78 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "61.4 µs ± 593 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "202 µs ± 6.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -176,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +189,7 @@
        "Index(['bedrs', 'bathrs', 'price_sqr_meter'], dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,10 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "big_column = pd.DataFrame(pd.concat([s1, s2, s3], axis=0))\n",
+    "\n",
+    "# Or use the to_frame method if it was a series (I made them DF at the get go)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,10 +225,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 300 entries, 0 to 99\n",
+      "Data columns (total 1 columns):\n",
+      "0    300 non-null int32\n",
+      "dtypes: int32(1)\n",
+      "memory usage: 3.5 KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big_column.info()\n",
+    "\n",
+    "big_column.shape[0]\n",
+    "\n",
+    "len(big_column)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,10 +268,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 300 entries, 0 to 299\n",
+      "Data columns (total 1 columns):\n",
+      "0    300 non-null int32\n",
+      "dtypes: int32(1)\n",
+      "memory usage: 1.2 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "big_column.reset_index(drop=True, inplace=True)\n",
+    "big_column.info()"
+   ]
   }
  ],
  "metadata": {
